2004-09-26  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Reordered and a lot of includes in a lot of files.

2004-09-26  Lars Gullik Bjonnes  <larsbj@gullik.net>
	    John Spray  <spray_john@users.sourceforge.net>

	* Initial move to gtk 2.4.

2004-09-26  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* WS changes.

2004-09-25  John Spray  <spray_john@users.sourceforge.net>

	* GPrint.C: minor fixes to make it compile and work, get rid of
	"Apply"
	* Dialogs.C: move from FormPrint to GPrint
	* Makefile.am: move from FormPrint to GPrint
	* glade/print.glade: rearrange, gtk stock button for Print, get
	rid of "Apply"

2004-09-24  John Spray  <spray_john@users.sourceforge.net>

	* GSearch.[Ch]: new files
	* Dialogs.C: move from formsearch to gsearch
	* Makefile.am: move from formsearch to gsearch, alphabetically
	sort list of libgtk_la_SOURCES
	* glade/search.glade: s/Backwords/Backwards/, accelerator escape
	for close button, gtk stock buttons for find and replace.

2004-09-23  John Spray  <spray_john@users.sourceforge.net>

	* GWorkArea.[Ch]: Add GWorkArea::onScrollWheel to implement
	mouse-wheel scrolling of document

2004-07-24  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* GPainter.C (text): use boost::scoped_array to store the
	temporary wchar_t pointer

	* lyx_gui.C: change "support/std_sstream.h" to <sstream>

2004-07-22  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyx_gui.C (register_socket_callback,unregister_socket_callback):
	implement
	(set_read_callback,remove_read_callback): remove implementation

	* io_callback.[Ch]: new files
	* Makefile.am (libgtk_la_SOURCES): handle them

2004-07-21  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyx_gui.C (register_socket_callback): add stub
	(unregister_socket_callback): add stub

2004-05-26  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Makefile.am: dont create a separate xforms.lo use he files
	directly when building libgtk instead.

2004-05-19  Angus Leeming  <leeming@lyx.org>
