@@ -80,6 +80,7 @@
 	<widget class="GtkEntry" id="FindEntry">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
+	  <property name="has_focus">True</property>
 	  <property name="editable">True</property>
 	  <property name="visibility">True</property>
 	  <property name="max_length">0</property>
@@ -190,7 +191,7 @@
 	    <widget class="GtkCheckButton" id="CaseSensitive">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">_Case sensitive</property>
+	      <property name="label" translatable="yes">Case s_ensitive</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
